--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,5 +1,7 @@
 doctype html
 html(lang='es-PE')
     include ./ci/head.jade
-  body
-    //escribe tu código html aquí  
+    body
+        include ./ci/header.jade
+        include ./ci/tema.jade
+        include ./ci/footer.jade
