--- a/assets/jade/ci/header.jade
+++ b/assets/jade/ci/header.jade
@@ -1,4 +1,4 @@
-banner
+header
 	.row
 		.col-md-2
 		.col-md-8
@@ -34,4 +34,14 @@ banner
 								i.fa.fa-rss
 						li
 							input(placeholder="Buscar")
+		.col-md-2
+	.row
+		.col-md-2
+		.col-md-8
+			.row
+				.col-md-4
+
+				.col-md-4
+				.col-md-4
+			.row
 		.col-md-2
