--- a/assets/jade/ci/header.jade
+++ b/assets/jade/ci/header.jade
@@ -3,7 +3,7 @@ header
 		.col-md-2
 		.col-md-8
 			.row
-				img(src="../image/banner_top.jpg")
+				img.img-responsive(src="../image/banner_top.jpg")
 			.row
 				.col-md-6
 					ul.list-unstyle.list-inline
