--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang='es-PE')
     include ./ci/head.jade
     body
-        include ./ci/header.jade
-        include ./ci/tema.jade
-        include ./ci/footer.jade
+        .container
+            include ./ci/header.jade
+            include ./ci/tema.jade
+            include ./ci/footer.jade
