--- a/assets/jade/ci/footer.jade
+++ b/assets/jade/ci/footer.jade
@@ -4,97 +4,209 @@ footer
 		.col-md-8
 			.col-md-4
 				img(src="../images/logo-grupo-la-republica")
-
+				h4 Grupo La República Digital
+				p Jr. Camaná 320 Cercado de Lima
+				br Teléfono: 711-6000
+				br (Central Telefónica)
+				p Todos los derechos reservados -2015
 			.col-md-2
 				ul
-					li Roger Federer
-					li SBS
-					li Scarlett Johansson
-					li Scotiabank
-					li Selena Gómez
-					li Spiderman
-					li Sporting Cristal
-					li Sunat
-					li Telefónica del Perú
-					li The Walking Dead
-					li Twitter
-					li Universidad Cesar Vallejo
-					li Universidad San Martín
-					li Universitario de Deportes
-					li Xbox
-					li You Tube
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
+					li 
+						a(href="#") Roger Federer
+					li 
+						a(href="#") SBS
+					li 
+						a(href="#") Scarlett Johansson
+					li 
+						a(href="#") Scotiabank
+					li 
+						a(href="#") Selena Gómez
+					li 
+						a(href="#") Spiderman
+					li 
+						a(href="#") Sporting Cristal
+					li 
+						a(href="#") Sunat
+					li 
+						a(href="#") Telefónica del Perú
+					li 
+						a(href="#") The Walking Dead
+					li 
+						a(href="#") Twitter
+					li 
+						a(href="#") Universidad Cesar Vallejo
+					li 
+						a(href="#") Universidad San Martín
+					li 
+						a(href="#") Universitario de Deportes
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") You Tube
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
 			.col-md-2
 				ul
-					li Al fondo hay sitio
-					li Alejandro Toledo
-					li Alianza Lima
-					li Alianza Lima
-					li Banco de la Nación
-					li Barack Obama
-					li Universidad César
-					li Vallejo
-					li Universidad de San Martin
-					li Barcelona
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
-					li Batman
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
+					li 
+						a(href="#") Al fondo hay sitio
+					li 
+						a(href="#") Alejandro Toledo
+					li 
+						a(href="#") Alianza Lima
+					li 
+						a(href="#") Alianza Lima
+					li 
+						a(href="#") Banco de la Nación
+					li 
+						a(href="#") Barack Obama
+					li 
+						a(href="#") Universidad César
+					li 
+						a(href="#") Vallejo
+					li 
+						a(href="#") Universidad de San Martin
+					li 
+						a(href="#") Barcelona
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
+					li 
+						a(href="#") Batman
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
 			.col-md-2
 				ul
-					li Al fondo hay sitio
-					li Alejandro Toledo
-					li Alianza Lima
-					li Alianza Lima
-					li Banco de la Nación
-					li Barack Obama
-					li Universidad César
-					li Vallejo
-					li Universidad de San Martin
-					li Barcelona
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
-					li Batman
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
+					li 
+						a(href="#") One Direction
+					li 
+						a(href="#") ONPE
+					li 
+						a(href="#") Pablo Escobar
+					li 
+						a(href="#") Paolo Guerrero
+					li 
+						a(href="#") Pensión 65
+					li 
+						a(href="#") PNP
+					li 
+						a(href="#") Precio del Dólar
+					li 
+						a(href="#") Universidad Cesar Vallejo
+					li 
+						a(href="#") Universidad de San Martin
+					li 
+						a(href="#") Premier League
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
+					li 
+						a(href="#") Proyecto Conga
+					li 
+						a(href="#") PUCP
+					li 
+						a(href="#") Real Madrid
+					li 
+						a(href="#") Redes Sociales
+					li 
+						a(href="#") Reniec
+					li 
+						a(href="#") Robert Pattinson
 			.col-md-2
 				ul
-					li Al fondo hay sitio
-					li Alejandro Toledo
-					li Alianza Lima
-					li Alianza Lima
-					li Banco de la Nación
-					li Barack Obama
-					li Universidad César
-					li Vallejo
-					li Universidad de San Martin
-					li Barcelona
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
-					li Batman
-					li Bayern Múnich
-					li Bayern Múnich
-					li BBVA
-					li Xbox
-					li BCP
-		.col-md-2
+					li 
+						a(href="#") Al fondo hay sitio
+					li 
+						a(href="#") Alejandro Toledo
+					li 
+						a(href="#") Alianza Lima
+					li 
+						a(href="#") Alianza Lima
+					li 
+						a(href="#") Banco de la Nación
+					li 
+						a(href="#") Barack Obama
+					li 
+						a(href="#") Universidad César
+					li 
+						a(href="#") Vallejo
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
+					li 
+						a(href="#") Universidad de San Martin
+					li 
+						a(href="#") Barcelona
+					li 
+						a(href="#") Batman
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") Bayern Múnich
+					li 
+						a(href="#") BBVA
+					li 
+						a(href="#") Xbox
+					li 
+						a(href="#") BCP
+		.col-md-2 
+	.row
+		ul
+			li 
+				a(href="#") Diarios del PAL:Clarin
+			li 
+				a(href="#") La Tercera
+			li 
+				a(href="#") El Universal Colombia
+			li 
+				a(href="#") El Universal Venezuela
+			li 
+				a(href="#") Vanguardia
+			li 
+				a(href="#") La Prensa
+			li 
+				a(href="#") El Salvador
+			li 
+				a(href="#") La Verdad
+			li 
+				a(href="#") El Diario Libre
+			li 
+				a(href="#") El Diario de hoy
+			li 
+				a(href="#") El Colombiano
