--- a/assets/jade/ci/footer.jade
+++ b/assets/jade/ci/footer.jade
@@ -10,7 +10,7 @@ footer
 				br (Central Telefónica)
 				p Todos los derechos reservados -2015
 			.col-md-2
-				ul
+				ul.list-unstyle
 					li 
 						a(href="#") Roger Federer
 					li 
@@ -54,7 +54,7 @@ footer
 					li 
 						a(href="#") BCP
 			.col-md-2
-				ul
+				ul.list-unstyle
 					li 
 						a(href="#") Al fondo hay sitio
 					li 
@@ -98,7 +98,7 @@ footer
 					li 
 						a(href="#") BCP
 			.col-md-2
-				ul
+				ul.list-unstyle
 					li 
 						a(href="#") One Direction
 					li 
@@ -142,7 +142,7 @@ footer
 					li 
 						a(href="#") Robert Pattinson
 			.col-md-2
-				ul
+				ul.list-unstyle
 					li 
 						a(href="#") Al fondo hay sitio
 					li 
@@ -185,9 +185,9 @@ footer
 						a(href="#") Xbox
 					li 
 						a(href="#") BCP
-		.col-md-2 
+		.col-md-2
 	.row
-		ul
+		ul.list-unstyle.list-inline
 			li 
 				a(href="#") Diarios del PAL:Clarin
 			li 
