--- a/assets/jade/ci/tema.jade
+++ b/assets/jade/ci/tema.jade
@@ -3,10 +3,21 @@
 		.col-md-2
 			img.img-responsive(src="../image/clubventa.jpg")
 		.col-md-8
-			.row
-
-			.row
-				img.img-responsive(src="../image/clubventa.jpg")
+			.navbar-header
+				button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
+					span.sr-only Toggle navigation
+					span.icon-bar
+					span.icon-bar
+					span.icon-bar
+				a.navbar-brand(href="#") Brand
+			#bs-example-navbar-collapse-1.collapse.navbar-collapse
+				ul.nav.navbar-nav
+					li.active
+						a(href="#")
+							span.sr-only (current)
+					li
+						a(href="#") Link
+	include tema-banner.jade
 			.row
 		.col-md-2
-			
+			img.img-responsive(src="../image/cambiatullanta.jpg")
