--- a/assets/jade/ci/footer.jade
+++ b/assets/jade/ci/footer.jade
@@ -3,14 +3,14 @@ footer
 		.col-md-2
 		.col-md-8
 			.col-md-4
-				img(src="../images/logo-grupo-la-republica")
+				img(src="../image/logo-grupo-la-republica.png")
 				h4 Grupo La República Digital
 				p Jr. Camaná 320 Cercado de Lima
-				br Teléfono: 711-6000
-				br (Central Telefónica)
+					<br> Teléfono: 711-6000</br>
+					<br> (Central Telefónica)</br>
 				p Todos los derechos reservados -2015
 			.col-md-2
-				ul.list-unstyle
+				ul.list-unstyled
 					li 
 						a(href="#") Roger Federer
 					li 
@@ -54,7 +54,7 @@ footer
 					li 
 						a(href="#") BCP
 			.col-md-2
-				ul.list-unstyle
+				ul.list-unstyled
 					li 
 						a(href="#") Al fondo hay sitio
 					li 
@@ -98,7 +98,7 @@ footer
 					li 
 						a(href="#") BCP
 			.col-md-2
-				ul.list-unstyle
+				ul.list-unstyled
 					li 
 						a(href="#") One Direction
 					li 
@@ -142,7 +142,7 @@ footer
 					li 
 						a(href="#") Robert Pattinson
 			.col-md-2
-				ul.list-unstyle
+				ul.list-unstyled
 					li 
 						a(href="#") Al fondo hay sitio
 					li 
@@ -187,26 +187,46 @@ footer
 						a(href="#") BCP
 		.col-md-2
 	.row
-		ul.list-unstyle.list-inline
+		ul.list-unstyled.list-inline
 			li 
 				a(href="#") Diarios del PAL:Clarin
 			li 
+				img(src="../image/border_portada.gif")
+			li 
 				a(href="#") La Tercera
+			li 
+				img(src="../image/border_portada.gif")
 			li 
 				a(href="#") El Universal Colombia
 			li 
+				img(src="../image/border_portada.gif")
+			li 
 				a(href="#") El Universal Venezuela
+			li 
+				img(src="../image/border_portada.gif")
 			li 
 				a(href="#") Vanguardia
 			li 
+				img(src="../image/border_portada.gif")
+			li 
 				a(href="#") La Prensa
+			li 
+				img(src="../image/border_portada.gif")
 			li 
 				a(href="#") El Salvador
 			li 
+				img(src="../image/border_portada.gif")
+			li 
 				a(href="#") La Verdad
+			li 
+				img(src="../image/border_portada.gif")
 			li 
 				a(href="#") El Diario Libre
 			li 
+				img(src="../image/border_portada.gif")
+			li 
 				a(href="#") El Diario de hoy
+			li 
+				img(src="../image/border_portada.gif")
 			li 
 				a(href="#") El Colombiano
