--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -2,3 +2,8 @@ mixin submenu(name, conten)
 	.div
 		a=name
 		p=conten
+// para la lista de los temas de día
+mixin temas-dia(tema)
+	li
+		a(href="#")= tema
+			img(src="../image/bullet.gif")
