--- a/assets/jade/ci/tema.jade
+++ b/assets/jade/ci/tema.jade
@@ -3,21 +3,33 @@
 		.col-md-2
 			img.img-responsive(src="../image/clubventa.jpg")
 		.col-md-8
-			.navbar-header
-				button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
-					span.sr-only Toggle navigation
-					span.icon-bar
-					span.icon-bar
-					span.icon-bar
-				a.navbar-brand(href="#") Brand
-			#bs-example-navbar-collapse-1.collapse.navbar-collapse
-				ul.nav.navbar-nav
-					li.active
-						a(href="#")
-							span.sr-only (current)
+			.nav.navbar-default
+				.navbar-header
+					button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
+					a.navbar-brand(href="#") TEMAS DEL DÍA
+				#bs-example-navbar-collapse-1.collapse.navbar-collapse
+				ul.pagination
 					li
-						a(href="#") Link
-	include tema-banner.jade
+						a(href="#" aria-label="Previous") 
+							span(aria-hidden="true")
+							&laquo;
+					include mixin.jade
+					+temas-dia('Globos de oro')
+					+temas-dia('Youtube')
+					+temas-dia('PNP')
+					+temas-dia('Charlie Hebdo')
+					+temas-dia('FC Barcelona')
+					+temas-dia('Alianza Lima')
+					+temas-dia('Balón de Oro')
+					+temas-dia('Alianza Lima')
+					+temas-dia('Balón de Oro')
+					li
+						a(href="#" aria-label="Next") 
+							span(aria-hidden="true")
+								&raquo;
+			include tema-banner.jade
 			.row
 		.col-md-2
 			img.img-responsive(src="../image/cambiatullanta.jpg")
+
+
