--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -7,3 +7,7 @@ mixin temas-dia(tema)
 	li
 		a(href="#")= tema
 			img(src="../image/bullet.gif")
+//para la lista del footer
+mixin listafooter(nombre)
+	li
+		a(href="#")=nombre
