--- a/assets/jade/ci/footer.jade
+++ b/assets/jade/ci/footer.jade
@@ -11,181 +11,104 @@ footer
 				p Todos los derechos reservados -2015
 			.col-md-2
 				ul.list-unstyled
-					li 
-						a(href="#") Roger Federer
-					li 
-						a(href="#") SBS
-					li 
-						a(href="#") Scarlett Johansson
-					li 
-						a(href="#") Scotiabank
-					li 
-						a(href="#") Selena Gómez
-					li 
-						a(href="#") Spiderman
-					li 
-						a(href="#") Sporting Cristal
-					li 
-						a(href="#") Sunat
-					li 
-						a(href="#") Telefónica del Perú
-					li 
-						a(href="#") The Walking Dead
-					li 
-						a(href="#") Twitter
-					li 
-						a(href="#") Universidad Cesar Vallejo
-					li 
-						a(href="#") Universidad San Martín
-					li 
-						a(href="#") Universitario de Deportes
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") You Tube
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
+					li
+					include mixin.jade
+					+listafooter('Roger Federer')
+					+listafooter('SBS')
+					+listafooter('Scarlett Johansson')
+					+listafooter('Scotiabank')
+					+listafooter('Selena Goméz')
+					+listafooter('Spiderman')
+					+listafooter('Sporting Cristal')
+					+listafooter('Sunat')
+					+listafooter('Telefónica del Perú')
+					+listafooter('The Walking Dead')
+					+listafooter('Twitter')
+					+listafooter('Universidad Cesar Vallejo ')
+					+listafooter('Universidad San Martin')
+					+listafooter('Universitario de Deportes')
+					+listafooter('XBox')
+					+listafooter('Youtube')
+					+listafooter('Bayern Munich')
+					+listafooter('Bayern Munich')
+					+listafooter('BBVA')
+					+listafooter('Xbox')
+					+listafooter('BCP')
 			.col-md-2
 				ul.list-unstyled
-					li 
-						a(href="#") Al fondo hay sitio
-					li 
-						a(href="#") Alejandro Toledo
-					li 
-						a(href="#") Alianza Lima
-					li 
-						a(href="#") Alianza Lima
-					li 
-						a(href="#") Banco de la Nación
-					li 
-						a(href="#") Barack Obama
-					li 
-						a(href="#") Universidad César
-					li 
-						a(href="#") Vallejo
-					li 
-						a(href="#") Universidad de San Martin
-					li 
-						a(href="#") Barcelona
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
-					li 
-						a(href="#") Batman
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
+					li
+					include mixin.jade
+					+listafooter('Al fondo hay sitio')
+					+listafooter('Alejandro Toledo')
+					+listafooter('Alianza Lima')
+					+listafooter('Alianza Lima')
+					+listafooter('Banco de la nación')
+					+listafooter('Barack Obama')
+					+listafooter('Universidad Cesar Vallejo')
+					+listafooter('Universidad San Martin')
+					+listafooter('Barcelona')
+					+listafooter('Bayern Munich')
+					+listafooter('Bayern Munich')
+					+listafooter('BBVA')
+					+listafooter('XBox')
+					+listafooter('BCP')
+					+listafooter('Batman')
+					+listafooter('Bayern Munich')
+					+listafooter('Bayern Munich')
+					+listafooter('BBVA')
+					+listafooter('Xbox')
+					+listafooter('BCP')
 			.col-md-2
 				ul.list-unstyled
-					li 
-						a(href="#") One Direction
-					li 
-						a(href="#") ONPE
-					li 
-						a(href="#") Pablo Escobar
-					li 
-						a(href="#") Paolo Guerrero
-					li 
-						a(href="#") Pensión 65
-					li 
-						a(href="#") PNP
-					li 
-						a(href="#") Precio del Dólar
-					li 
-						a(href="#") Universidad Cesar Vallejo
-					li 
-						a(href="#") Universidad de San Martin
-					li 
-						a(href="#") Premier League
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
-					li 
-						a(href="#") Proyecto Conga
-					li 
-						a(href="#") PUCP
-					li 
-						a(href="#") Real Madrid
-					li 
-						a(href="#") Redes Sociales
-					li 
-						a(href="#") Reniec
-					li 
-						a(href="#") Robert Pattinson
+					li
+					include mixin.jade
+					+listafooter('Roger Federer')
+					+listafooter('SBS')
+					+listafooter('Scarlett Johansson')
+					+listafooter('Scotiabank')
+					+listafooter('Selena Goméz')
+					+listafooter('Spiderman')
+					+listafooter('Sporting Cristal')
+					+listafooter('Sunat')
+					+listafooter('Telefónica del Perú')
+					+listafooter('The Walking Dead')
+					+listafooter('Twitter')
+					+listafooter('Universidad Cesar Vallejo ')
+					+listafooter('Universidad San Martin')
+					+listafooter('Universitario de Deportes')
+					+listafooter('XBox')
+					+listafooter('Youtube')
+					+listafooter('Bayern Munich')
+					+listafooter('Bayern Munich')
+					+listafooter('BBVA')
+					+listafooter('Xbox')
+					+listafooter('BCP')
 			.col-md-2
 				ul.list-unstyled
-					li 
-						a(href="#") Al fondo hay sitio
-					li 
-						a(href="#") Alejandro Toledo
-					li 
-						a(href="#") Alianza Lima
-					li 
-						a(href="#") Alianza Lima
-					li 
-						a(href="#") Banco de la Nación
-					li 
-						a(href="#") Barack Obama
-					li 
-						a(href="#") Universidad César
-					li 
-						a(href="#") Vallejo
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
-					li 
-						a(href="#") Universidad de San Martin
-					li 
-						a(href="#") Barcelona
-					li 
-						a(href="#") Batman
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") Bayern Múnich
-					li 
-						a(href="#") BBVA
-					li 
-						a(href="#") Xbox
-					li 
-						a(href="#") BCP
-		.col-md-2
+					li
+					include mixin.jade
+					+listafooter('Roger Federer')
+					+listafooter('SBS')
+					+listafooter('Scarlett Johansson')
+					+listafooter('Scotiabank')
+					+listafooter('Selena Goméz')
+					+listafooter('Spiderman')
+					+listafooter('Sporting Cristal')
+					+listafooter('Sunat')
+					+listafooter('Telefónica del Perú')
+					+listafooter('The Walking Dead')
+					+listafooter('Twitter')
+					+listafooter('Universidad Cesar Vallejo ')
+					+listafooter('Universidad San Martin')
+					+listafooter('Universitario de Deportes')
+					+listafooter('XBox')
+					+listafooter('Youtube')
+					+listafooter('Bayern Munich')
+					+listafooter('Bayern Munich')
+					+listafooter('BBVA')
+					+listafooter('Xbox')
+					+listafooter('BCP')
+		
 	.row
 		ul.list-unstyled.list-inline
 			li 
