mixin - extends - include - blocks

--- a/assets/jade/ci/header.jade
+++ b/assets/jade/ci/header.jade
@@ -42,8 +42,8 @@ header
 				.col-md-4
 					img.img-responsive(src="../image/logo-la-republica.jpg")
 				.col-md-4
-					include mixin.jade
-					+submenu('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
+					//-include mixin.jade
+					//-+submenu('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 				.col-md-4
 					.div
 						img.img-responsive(src="../image/img_editorial_text.jpg")
