--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,8 +1,23 @@
-doctype html
-html(lang='es-PE')
-    include ./ci/head.jade
-    body
-        .container
-            include ./ci/header.jade
-            include ./ci/tema.jade
-            include ./ci/footer.jade
+extends ci/layout.jade
+include ci/mixin.jade
+block header-banner 
+	block image
+		+imagen('../image/banner_top.jpg')
+	block header-list
+		+header-lista('LIBERO.PE','ELPOPULAR.PE','FUNDACION GUSTAVO MOHME LLONA')
+	block header-redes
+		+header-lista('SUSCRIBETE AL BOLETIN')
+block header-editorial
+	block image
+		+imagen('../image/logo-la-republica.jpg')
+	block header-editorial-noticia
+		+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
+	block autor
+		+imagen('../image/img_editorial_text.jpg')
+		+autor('La corrupción, los origenes','Gustavo Mohme Llona')
+		+imagen('../image/img_author.jpg')
+	block header-menu
+		+header-lista('POLITICA','ECONOMIA','SOCIEDAD','ELECC.REGIONALES','DEPORTES','CHAMPIONS L','ESPECTÁCULOS','ED. IMPRESA','REGIONALES','MAS SECCIONES')
+
+
+
