--- a/assets/jade/ci/footer.jade
+++ b/assets/jade/ci/footer.jade
@@ -50,7 +50,7 @@ footer
 					+listafooter('Bayern Munich')
 					+listafooter('Bayern Munich')
 					+listafooter('BBVA')
-					+listafooter('XBox')
+					+listafooter('Xbox')
 					+listafooter('BCP')
 					+listafooter('Batman')
 					+listafooter('Bayern Munich')
