--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -8,7 +8,7 @@ html(lang='es-PE')
 				.col-md-8
 					block header-banner
 						.div
-							block image
+							block header-image
 						.row
 							.col-md-6
 								block header-list
@@ -21,7 +21,7 @@ html(lang='es-PE')
 					block header-editorial
 						.row
 							.col-md-4
-								block image
+								block header-logo-image
 							.col-md-4
 								block header-editorial-noticia
 							.col-md-4
