--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,14 +1,14 @@
 extends ci/layout.jade
 include ci/mixin.jade
 block header-banner 
-	block image
+	block header-image
 		+imagen('../image/banner_top.jpg')
 	block header-list
 		+header-lista('LIBERO.PE','ELPOPULAR.PE','FUNDACION GUSTAVO MOHME LLONA')
 	block header-redes
 		+header-lista('SUSCRIBETE AL BOLETIN')
 block header-editorial
-	block image
+	block header-logo-image
 		+imagen('../image/logo-la-republica.jpg')
 	block header-editorial-noticia
 		+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
