--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -1,23 +1,15 @@
 extends ci/layout.jade
 include ci/mixin.jade
-block header-banner 
-	block header-image
-		+imagen('../image/banner_top.jpg')
-	block header-list
-		+header-lista('LIBERO.PE','ELPOPULAR.PE','FUNDACION GUSTAVO MOHME LLONA')
-	block header-redes
-		+header-lista('SUSCRIBETE AL BOLETIN')
 block header-editorial
-	block header-logo-image
-		+imagen('../image/logo-la-republica.jpg')
-	block header-editorial-noticia
-		+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
-	block autor
-		+imagen('../image/img_editorial_text.jpg')
-		+autor('La corrupción, los origenes','Gustavo Mohme Llona')
-		+imagen('../image/img_author.jpg')
-	block header-menu
-		+header-lista('POLITICA','ECONOMIA','SOCIEDAD','ELECC.REGIONALES','DEPORTES','CHAMPIONS L','ESPECTÁCULOS','ED. IMPRESA','REGIONALES','MAS SECCIONES')
-
-
-
+	.row
+		.col-md-4
+			block header-logo-image
+				+imagen('../image/logo-la-republica.jpg')
+		.col-md-4
+			block header-editorial-noticia
+				+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
+		.col-md-4
+			block autor
+				+imagen('../image/img_editorial_text.jpg')
+				+autor('La corrupción, los origenes','Gustavo Mohme Llona')
+				+imagen('../image/img_author.jpg')
