--- a/assets/jade/ci/head.jade
+++ b/assets/jade/ci/head.jade
@@ -1,6 +1,6 @@
 head
     meta(charset='UTF-8')
-    title LA REPUBLICA - HOME
+    title LA REPUBLICA
     link(href='http://fonts.googleapis.com/css?family=PT+Sans:400,700', rel='stylesheet', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Oswald:400,700', rel='stylesheet', type='text/css')
     link(rel='stylesheet', type='text/css', href='../css/dist/font-awesome.min.css')
