--- a/assets/jade/columnistas.jade
+++ b/assets/jade/columnistas.jade
@@ -9,3 +9,70 @@ block content
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
 			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_01.jpg','BLOG','Décimas cosas')
+			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
+			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
+			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_01.jpg','BLOG','Décimas cosas')
+			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
+			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
+			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_01.jpg','BLOG','Décimas cosas')
+			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
+			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
+			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_01.jpg','BLOG','Décimas cosas')
+		+seccion-descripcion('TODOS LOS COLUMNISTAS')
+		ul.list-unstyled.list-inline.pdt-1
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
+			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
