--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -8,10 +8,13 @@ mixin imagen(url)
 //-			li
 //-	
 			a(href="#")= val
-mixin li-input(type, nombre, ejemplo)
-	li
-		input(type= type, radiolabel= nombre)
-		span.text-right (Ej:= ejemplo )
+mixin list-input-radio(type,args,ejemplo)
+	p
+		input(type= type)
+		!= args.radiolabel
+		span (Ej:
+		span= ejemplo
+		span )
 mixin li-a-img(tema,imagen)
 	li
 		a(href="#")= tema
