--- a/assets/jade/columnistas.jade
+++ b/assets/jade/columnistas.jade
@@ -3,7 +3,7 @@ include ci/mixin.jade
 block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 block content
-	#blog
+	#columnistas
 		+seccion('BLOG','LO ULTIMO EN BLOGS')
 		ul.list-unstyled.list-inline.pdt-1
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
